Added player view

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <meta charset="UTF-8">
 <head></head>
 	<body style="background-color:#000000;">
+		<script src="src/Items.js"></script>
 		<script src="src/CommandManager.js"></script>
 		<script src="src/Player.js"></script>
 		<script src="src/Dungeon.js"></script>
