--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<script src="src/Items.js"></script>
 		<script src="src/CommandManager.js"></script>
 		<script src="src/Player.js"></script>
+		<script src="src/Enemy.js"></script>
 		<script src="src/Dungeon.js"></script>
 		<script src="src/index.js"></script>
 		
